creado esqueleto básico con los archivos common a usar. configurado tambien cmake funcionando, testeado con mains basicos y 1 thread.

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,8 @@
 *.exe
 *.out
 *.app
-client
-server
+client_src
+server_src
 
 # Mac
 .DS_Store
@@ -45,3 +45,4 @@ server
 
 # Idea
 .idea
+cmake-build-debug
