Changing version in `cppcheck`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: cpplint
         files: ^(.*[.]cpp|.*[.]h)$
   - repo: https://github.com/pocc/pre-commit-hooks
-    rev: 9a9bbc00895bbdb7670231c2565d4f1309c42905  # SHA of v1.3.5
+    rev: v1.3.5
     hooks:
       - id: cppcheck
         files: ^(.*[.]cpp|.*[.]h)$
