Changed hook: cppcheck

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,8 +11,8 @@ repos:
     hooks:
       - id: cpplint
         files: ^(.*[.]cpp|.*[.]h)$
-  - repo: https://github.com/pocc/pre-commit-hooks
-    rev: v1.3.5
+  - repo: https://github.com/bmorcos/pre-commit-hooks-cpp
+    rev: master
     hooks:
       - id: cppcheck
         files: ^(.*[.]cpp|.*[.]h)$
