--- a/.github/workflows/pre-commit-check.yaml
+++ b/.github/workflows/pre-commit-check.yaml
@@ -10,4 +10,5 @@ jobs:
     - uses: actions/setup-python@v2
     - run: |
         pip3 install pre-commit
+        pre-commit install
         pre-commit run --all-files
