--- a/.github/workflows/pre-commit-check.yaml
+++ b/.github/workflows/pre-commit-check.yaml
@@ -10,5 +10,6 @@ jobs:
     - uses: actions/setup-python@v2
     - run: |
         pip3 install pre-commit
+        sudo apt-get -y install cppcheck
         pre-commit install
         pre-commit run --all-files
