--- a/.github/workflows/pre-commit-check.yaml
+++ b/.github/workflows/pre-commit-check.yaml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
     - run: |
-        pip3 install pre-commit
         sudo apt-get -y install cppcheck
-        pre-commit install
-        pre-commit run --all-files
+    - uses: pre-commit/action@v2.0.3
+      with:
+        extra_args: --all-files
