--- a/.github/workflows/pre-commit-check.yaml
+++ b/.github/workflows/pre-commit-check.yaml
@@ -8,6 +8,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
+    - run: |
+        sudo apt-get -y install cppcheck
     - uses: pre-commit/action@v2.0.3
       with:
         extra_args: --all-files
