Added instalation of `tiburoncin`

--- a/.github/workflows/test-events.yaml
+++ b/.github/workflows/test-events.yaml
@@ -11,6 +11,11 @@ jobs:
           mkdir build
           cd build && cmake .. && make
           cd ..
+          git clone https://github.com/eldipa/tiburoncin.git
+          cd tiburoncin
+          make
+          sudo cp tiburoncin /usr/bin/
+          cd ..
           ./tests/events/client_to_server/run_tests.sh build/ tests/events/client_to_server/cases/ single-client no-valgrind 60 10
           ./tests/events/client_to_server/compare_outputs.sh tests/events/client_to_server/cases/ tests/events/client_to_server/expected/
           rm -r build
@@ -21,6 +26,11 @@ jobs:
       - run: |
           mkdir build
           cd build && cmake .. && make
+          cd ..
+          git clone https://github.com/eldipa/tiburoncin.git
+          cd tiburoncin
+          make
+          sudo cp tiburoncin /usr/bin/
           cd ..
           ./tests/events/server_to_client/run_tests.sh build/ tests/events/server_to_client/cases/ single-client no-valgrind 60 10
           ./tests/events/server_to_client/compare_outputs.sh tests/events/server_to_client/cases/ tests/events/server_to_client/expected/
