Added `valgrind` instalation

--- a/.github/workflows/test-events.yaml
+++ b/.github/workflows/test-events.yaml
@@ -16,6 +16,7 @@ jobs:
           make
           sudo cp tiburoncin /usr/bin/
           cd ..
+          sudo apt-get install valgrind
           ./tests/events/client_to_server/run_tests.sh build/ tests/events/client_to_server/cases/ single-client no-valgrind 60 10
           ./tests/events/client_to_server/compare_outputs.sh tests/events/client_to_server/cases/ tests/events/client_to_server/expected/
           rm -r build
@@ -32,6 +33,7 @@ jobs:
           make
           sudo cp tiburoncin /usr/bin/
           cd ..
+          sudo apt-get install valgrind
           ./tests/events/server_to_client/run_tests.sh build/ tests/events/server_to_client/cases/ single-client no-valgrind 60 10
           ./tests/events/server_to_client/compare_outputs.sh tests/events/server_to_client/cases/ tests/events/server_to_client/expected/
           rm -r build
