--- a/.github/workflows/test-events.yaml
+++ b/.github/workflows/test-events.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           mkdir build
-          cd build && cmake .. && make
+          cd build && cmake -DEVENTS=ON .. && make
           cd ..
           git clone https://github.com/eldipa/tiburoncin.git
           cd tiburoncin
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           mkdir build
-          cd build && cmake .. && make
+          cd build && cmake -DEVENTS=ON .. && make
           cd ..
           git clone https://github.com/eldipa/tiburoncin.git
           cd tiburoncin
