minor changes de dependencias y compatibilidades. tambien se está comenzando a implementar los correctos mensajes para ser ejecutados en matches_manager.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,25 +35,18 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LDFLAGS}")
 
 file(GLOB_RECURSE SOURCES_CLIENT "client/*.cpp" "client_*.cpp")
-file(GLOB_RECURSE SOURCES_SERVER "server/*.cpp" "server/game_logic/*.cpp" "server_*.cpp")
-file(GLOB_RECURSE SOURCES_COMMON "common/*.cpp" "common_*.cpp")
+file(GLOB_RECURSE SOURCES_SERVER "server/*.cpp" "server/game_logic/*.cpp" "server/protocol/*.cpp" "server_*.cpp")
+file(GLOB_RECURSE SOURCES_COMMON "common/*.cpp" "common/protocol/*.cpp" "common/protocol/messages/*.cpp" "common_*.cpp")
 file(GLOB_RECURSE SOURCES_GAME_ENGINE "game_engine/*.cpp" "game_engine_*.cpp")
 
 file(GLOB_RECURSE HEADERS_CLIENT "client/*.h" "client_*.h")
-file(GLOB_RECURSE HEADERS_SERVER "server/*.h" "server/game_logic/*.h" "server_*.h")
-file(GLOB_RECURSE HEADERS_COMMON "common/*.h" "common_*.h")
+file(GLOB_RECURSE HEADERS_SERVER "server/*.h" "server/game_logic/*.h" "server/protocol/*.h" "server_*.h")
+file(GLOB_RECURSE HEADERS_COMMON "common/*.h" "common/protocol/*.h" "common/protocol/messages/*.h" "common_*.h")
 file(GLOB_RECURSE HEADERS_GAME_ENGINE "game_engine/*.h" "game_engine_*.h")
 
 
-add_executable(client ${SOURCES_COMMON} ${SOURCES_CLIENT} ${HEADERS_CLIENT} ${HEADERS_COMMON} ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE}
-        game_engine/physics_engine/colision_object/colision_box.h
-        game_engine/physics_engine/colision_object/colision_object.cpp
-        game_engine/physics_engine/colision_object/colision_box.cpp
-        game_engine/physics_engine/area_object/area_object.cpp
-        game_engine/physics_engine/area_object/area_object.h
-)
-
-add_executable(server ${SOURCES_COMMON} ${SOURCES_SERVER} ${HEADERS_SERVER} ${HEADERS_COMMON})
+add_executable(client ${SOURCES_COMMON} ${HEADERS_COMMON} ${SOURCES_CLIENT} ${HEADERS_CLIENT}  ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE})
+add_executable(server ${SOURCES_COMMON} ${HEADERS_COMMON} ${SOURCES_SERVER} ${HEADERS_SERVER} )
 target_link_libraries(client SDL2main SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 
 # GRAPHICS TEST
