corregido error de cierre cuando un cliente se conecta a una partida y queda a la espera de otro jugador pero cierra el servidor antes. corregido error de dependendencias circulares en messages. eliminado archivos innecesarios. Falta solucionar error de compilacion del cliente por alguna falla en reconocer weapons, de player.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ file(GLOB_RECURSE HEADERS_COMMON "common/*.h" "common/protocol/*.h" "common/prot
 file(GLOB_RECURSE HEADERS_GAME_ENGINE "game_engine/*.h" "game_engine_*.h")
 
 
-add_executable(client ${SOURCES_COMMON} ${HEADERS_COMMON} ${SOURCES_CLIENT} ${HEADERS_CLIENT}  ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE})
+add_executable(client ${SOURCES_COMMON} ${HEADERS_COMMON} ${SOURCES_CLIENT} ${HEADERS_CLIENT}  ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE} ${HEADERS_SERVER})
 add_executable(server ${SOURCES_COMMON} ${HEADERS_COMMON} ${SOURCES_SERVER} ${HEADERS_SERVER} )
 target_link_libraries(client SDL2main SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 
